# xnminer-linux

./: .gitignore  HOWTO.md  README.md  install.sh  main.py  miner.ini.example  requirements.txt  start-miner.sh
block_queue/: __init__.py  flush.py  policy.py  store.py  submit_cpu.py
config/: __init__.py  settings.py  wallet_setup.py
core/: __init__.py  instance_lock.py  models.py  supervisor.py
debug/: __init__.py  _check_xblk.py  _inspect_xenblocks_db.py  diagnostics.py  probe_woodyminer.py  restore_queue.py  temp_watchdog.py
efficiency/: __init__.py  cuda_lane_policy.py  gpu_power.py  lane_manager.py  vram_budget.py  vram_guard.py  vram_policy.py
mining/: __init__.py  argon2_common.py  base.py  block_types.py  cuda_engine.py  vram_batch.py  xenblocks_watcher.py
monitoring/: __init__.py  dashboard.py  dashboard_stats.py  local_stats.py  logger.py  metrics.py  nvidia.py  periods.py  rewards.py  server_uptime.py  timelapse.py  wallet_balances.py  woodyminer_stats.py  xenblockscan_reporter.py
native/: build.sh
native/XenblocksMiner-main/: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  goal.md  requirements-dev.txt
native/XenblocksMiner-main/.github/workflows/: release.yml
native/XenblocksMiner-main/doc/: BUILD_INSTRUCTIONS.md  HIVEOS.md
native/XenblocksMiner-main/docs/: HASH_API_EXTRACTION_GOAL.md  HASH_OPTIMIZATION_GOAL.md  api-reference.md  api.md  architecture.md  authentication.md  deployment.md  design-system.md  development-baseline.md  hash-api.md  testing.md  websocket-protocol.md
native/XenblocksMiner-main/hiveos/: h-manifest.conf
native/XenblocksMiner-main/proto/: README.md  platform_to_worker.json  worker_to_platform.json
native/XenblocksMiner-main/proto/examples/: assign_task.json  block_found.json  control_pause.json  control_resume.json  control_shutdown.json  heartbeat.json  register.json  register_ack_accepted.json  register_ack_rejected.json  release.json  status.json  status_offline.json
native/XenblocksMiner-main/res/: version.rc
native/XenblocksMiner-main/scripts/: README.md  cuda_resource_summary.py  generate_test_data.py  hash_api_benchmark.py  hash_api_compare.py  hash_benchmark_trends.py  mock_fleet.py  test_cpp_integration.sh
native/XenblocksMiner-main/server/: README.md  account.py  auth.py  broker.py  chain_simulator.py  dashboard.py  deps.py  matcher.py  models.py  monitoring.py  pricing.py  reputation.py  requirements.txt  server.py  settlement.py  simulator.py  wallet_snapshot.py  watcher.py  ws.py
native/XenblocksMiner-main/server/hash_api/: __init__.py  app.py  client.py  models.py  server.py  validation.py
native/XenblocksMiner-main/server/routers/: __init__.py  account.py  admin.py  marketplace.py  monitoring.py  overview.py  provider.py  rental.py  wallet.py  ws.py
native/XenblocksMiner-main/server/storage/: __init__.py  _migrate.py  _schema.py  accounts.py  blocks.py  leases.py  manager.py  settlement_repo.py  snapshots.py  transactions.py  wallet_snapshots.py  workers.py
native/XenblocksMiner-main/src/: AppConfig.cpp  AppConfig.h  Argon2idHasher.h  BlockSubmitter.cpp  BlockSubmitter.h  ComputeBackend.h  CudaBackend.cpp  CudaBackend.h  CudaDevice.cpp  CudaDevice.h  CudaException.h  DifficultyManager.cpp  DifficultyManager.h  EthereumSignatureValidator.cpp  EthereumSignatureValidator.h  HttpClient.cpp  HttpClient.h  LeaseManager.cpp  LeaseManager.h  LocalServer.cpp  LocalServer.h  MachineIDGetter.cpp  MachineIDGetter.h  MineUnit.cpp  MineUnit.h  MiningCommon.cpp  MiningCommon.h  MiningCoordinator.cpp  MiningCoordinator.h  MqttClient.cpp  MqttClient.h  PlatformManager.cpp  PlatformManager.h  PowSubmitter.cpp  ProcessMonitor.cpp  ProcessMonitor.h  RandomHexKeyGenerator.h  StatReporter.cpp  StatReporter.h  WorkerReporter.cpp  (+7 more)
native/XenblocksMiner-main/src/hashapi/: CpuHashBackend.cpp  CpuHashBackend.h  CudaHashBackend.cpp  CudaHashBackend.h  HashApiCli.cpp  HashApiCli.h  HashApiEncoding.cpp  HashApiEncoding.h  HashApiJson.cpp  HashApiJson.h  HashApiMatching.cpp  HashApiMatching.h  HashApiTuning.cpp  HashApiTuning.h  HashApiTypes.h  HashApiValidation.cpp  HashApiValidation.h  StubHashBackend.cpp  main.cpp
native/XenblocksMiner-main/tests/cpp/: argon2_finalize_benchmark.cpp  blake2b_copy_selftest.cpp
native/XenblocksMiner-main/tests/integration/: conftest.py  test_block_discovery.py  test_cpp_worker.py  test_error_recovery.py  test_lease_flow.py  test_monitoring_api.py  test_multi_worker.py  test_settlement.py  test_websocket.py  test_worker_registration.py
native/XenblocksMiner-main/tests/unit/: conftest.py  mock_mqtt_broker.py  test_cuda_resource_summary.py  test_hash_api_benchmark.py  test_hash_api_compare.py  test_hash_api_contract.py  test_hash_api_service.py  test_hash_benchmark_trends.py  test_key_prefix.py  test_mining_flow.py  test_monitoring.py  test_mqtt_integration.py  test_security.py  test_state_machine.py
native/XenblocksMiner-main/web/: index.html  package-lock.json  package.json
native/XenblocksMiner-main/web/src/: App.tsx  api.ts  index.css  types.ts
native/XenblocksMiner-main/web/src/components/: ErrorBoundary.tsx  Layout.tsx
native/XenblocksMiner-main/web/src/context/: DashboardContext.tsx  WalletContext.tsx
native/XenblocksMiner-main/web/src/design/: ChartCard.tsx  ConfirmDialog.tsx  DataTable.tsx  EmptyState.tsx  GpuBadge.tsx  HashText.tsx  LWChart.tsx  MetricCard.tsx  Pill.tsx  ProgressBar.tsx  Skeleton.tsx  StatDelta.tsx  StatusBadge.tsx  Tooltip.tsx  ViewToggle.tsx  index.ts  tokens.ts
native/XenblocksMiner-main/web/src/hooks/: usePersistedState.ts  useWebSocket.ts
native/XenblocksMiner-main/web/src/lib/: queryClient.ts
native/XenblocksMiner-main/web/src/pages/: Account.tsx  Marketplace.tsx  Monitoring.tsx  NotFound.tsx  Overview.tsx  Provider.tsx  Renter.tsx
native/XenblocksMiner-main/web/src/utils/: format.ts
native/engine/: CMakeLists.txt  xen_cuda_api.cpp  xen_cuda_api.h
networking/: __init__.py  difficulty.py  health.py  poller.py  submit_result.py  submitter.py
strategies/: __init__.py  base.py  fibonacci_strategy.py  random_strategy.py  (+1 more)
(+27 files in other folders)
